# GeodeLua

./: .gitignore  CMakeLists.txt  README.md  mod.json  test.lua
codegen/: CMakeLists.txt  README.md  protected_private.txt  symboldump.py  symbolfilter.py  symbols.txt  symbols_demangled.txt
codegen/src/: cli.cpp  gencpp.cpp  gencpp.hpp  genlua.cpp  genlua.hpp
src/: codegen.cpp  codegen.hpp  main.cpp  sol.hpp
